--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/netflix?schema=public"
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/shop?schema=public"
 
 
 #AUTH PROVIDER
